fixed card alignment

--- a/css/index.css
+++ b/css/index.css
@@ -94,6 +94,14 @@
         line-height: 1.77;
     }
     
+    .title--card {
+        font-size: 1.3rem;
+        font-weight: 400;
+        line-height: 1.05;
+        margin-top: 0;
+        text-align: lef;
+    }
+    
     .text {
         font-size: 1.13rem;
         font-weight: normal;
